# favorite-color-program

./: README.md  package.json  pnpm-lock.yaml
apps/web/src/hooks/: use-appkit-wallet.tsx  use-solana-connection.tsx
apps/web/src/lib/: constants.ts
apps/web/src/routes/: __root.tsx  index.tsx
programs/favorite-color-program/src/: lib.rs
rust-services/: Anchor.toml
rust-services/programs/favorite-color-program/: Cargo.toml
scripts/: get-color.ts  set-color.ts
tests/: favorite-color-program.ts
ts-services/: package.json  pnpm-lock.yaml
ts-services/apps/web/: package.json
ts-services/apps/web/src/hooks/: use-color.tsx
ts-services/apps/web/src/routes/: index.tsx
ts-services/program-scripts/: get-color.ts  set-color.ts
ts-services/tests/: favorite-color-program.ts
